# zeek_anomaly_detector

./: pyproject.toml  zeek_anomaly_detector.ipynb
