[project]
name = "zeek-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.0",
    "numpy<2.4",
    "pandas<3.0.0",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<=69.5.1",
    "ydata-profiling[notebook]>=4.18.1",
    "zeeklog2pandas>=1.0.2",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "ipykernel>=7.2.0",
    "isort>=7.0.0",
]
